--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     </div>
     <div style="top: 50px;width: 300px; position: fixed; height: 100%; left: 0;">
         <ul style="list-style-type: none; margin: 0; padding: 0; width: 300px; background-color: #f1f1f1; height: 100%; position: fixed; overflow: auto;">
-
         </ul>
+    </div>
+    <div name="content" style="margin-left: 300px; padding: 20px; margin-top: 50px;">
+        <h2>Vũ Minh Hiếu</h2>
+        <p>18020494</p>
     </div>
   </body>
 </html>
